@@ -1,3 +1,6 @@
+2012-05-31  Kirit Saelensminde  <kirit@felspar.com>
+ The mock client now uses the same model type constructor as the real client. This means that proxies are properly applied.
+
 2012-05-30  Kirit Saelensminde  <kirit@felspar.com>
  Changed the type name for the instance type so we no longer need to do any model look ups to calculate the name.
 
